# ITESM_ML_Team_2

./: README.md  ejemplo_dos.txt  ejemplo_uno.py  main.py  pyproject.toml
src/calculadora/Operaciones/: potencia.py  raiz_cuadrada.py  restar.py  sumar.py  test_potencia.py  wq
src/tests/integration/: test_integracion.py
src/tests/unit/: test_raiz_cuadrada.py
