[project]
name = "calculadora"
version = "0.1.0"
description = "Calculadora básica / MVP"
authors = [
    {name = "Alvaro Quiroz",email = "a.quiroz01@ufromail.cl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
